--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hookmeup": "cd utility; ./hookmeup.sh",
     "karma-internal": "karma start --single-run",
     "karma": "karma start --single-run",
+    "unit-tests": "node utility/execute-unit-tests.js",
     "less": "lessc src/main/css/production.less > src/main/css/app.css",
     "lint": "node node_modules/.bin/jshint --config ./.jshintrc --exclude-path ./.jshintignore src/main/",
     "postinstall": "parallelshell 'npm run hookmeup' 'npm run less' 'grunt install'",
@@ -40,46 +41,46 @@
     "node": "5.9.0"
   },
   "dependencies": {
-    "graceful-fs": "^4.1.3",
-    "lodash": "^4.6.1",
-    "bower": "^1.7.7",
+    "bower": "^1.7.9",
     "cssmin": "^0.4.3",
-    "glob": "3.1.21",
-    "glob-all": "3.0.1",
-    "grunt": "^0.4.5",
-    "grunt-angular-gettext": "^2.1.11",
+    "glob": "^7.0.3",
+    "glob-all": "^3.0.1",
+    "graceful-fs": "^4.1.3",
+    "grunt": "^1.0.1",
+    "grunt-angular-gettext": "^2.1.14",
     "grunt-cli": "^0.1.13",
     "httpbackend": "^2.0.0",
     "instant-server": "^2.0.0",
     "jasmine-core": "^2.4.1",
     "jasmine-reporters": "^2.1.1",
-    "jshint": "^2.9.1",
+    "jshint": "^2.9.2",
     "karma": "^0.13.22",
     "karma-cli": "^0.1.2",
     "karma-coverage": "^0.5.5",
     "karma-jasmine": "^0.3.8",
-    "karma-junit-reporter": "^0.4.0",
+    "karma-junit-reporter": "^0.4.2",
     "karma-phantomjs-launcher": "^1.0.0",
-    "karma-requirejs": "^0.2.5",
+    "karma-requirejs": "^0.2.6",
     "lazystream": "^1.0.0",
     "less": "^2.6.1",
-    "load-grunt-tasks": "^3.4.1",
-    "local-web-server": "^1.2.1",
+    "load-grunt-tasks": "^3.5.0",
+    "local-web-server": "^1.2.2",
+    "lodash": "^4.11.1",
     "mkdirp": "^0.5.1",
-    "onchange": "^2.1.2",
+    "onchange": "^2.4.0",
     "parallelshell": "^2.0.0",
-    "phantomjs-prebuilt": "^2.1.5",
+    "phantomjs-prebuilt": "^2.1.7",
     "process": "^0.11.2",
-    "protractor": "^3.1.1",
-    "protractor-html-screenshot-reporter": "^0.0.21",
-    "protractor-jasmine2-screenshot-reporter": "^0.3.0",
-    "react": "^0.14.7",
-    "readable-stream": "^2.0.1",
+    "protractor": "^3.2.2",
+    "protractor-html-screenshot-reporter": "0.0.21",
+    "protractor-jasmine2-screenshot-reporter": "^0.3.1",
+    "react": "^0.14.8",
+    "readable-stream": "^2.1.0",
     "replacestream": "^4.0.0",
-    "requirejs": "^2.1.22",
+    "requirejs": "^2.2.0",
     "rimraf": "^2.5.2",
     "uglify-js": "^2.6.2",
-    "webdriver-manager": "^8.0.0"
+    "webdriver-manager": "^9.0.0"
   },
   "folders": {
     "build": "target/",
